--- a/index.css
+++ b/index.css
@@ -2,8 +2,13 @@
     background-color: #0000ffb5;
     display: flex;
     justify-content: space-between;
-    /* position: fixed;
-    width: 100%; */
+     /* position: fixed;  */
+     /* width: 100%;   */
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
 }
 
 
@@ -37,14 +42,17 @@
 .main-body{
     background-image: linear-gradient(rgb(0 157 255 / 0%),rgb(0 0 255 / 87%)),url(./images/banner_image.jpg);
     background-position: center;
-    padding-top: 100px;
-    padding-bottom: 200px;
+    padding-top: 300px;
+    padding-bottom: 300px;
     text-align: center;
     color:white;
     font-style: italic;
     font-variant: all-small-caps;
     font-family: cursive;
     word-spacing: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
     
 
     
@@ -59,6 +67,7 @@ body{
     font-size:medium;
     font-weight: bold;
     margin: 0px;
+    
 
 }
 section button{
@@ -88,24 +97,30 @@ section p{
 .owner{
     text-align: center;
     background-color: rgba(100, 27, 0, 0.321);
-    padding-top: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
    }    
 .head{
     text-transform: capitalize;
     font-weight: bold;
     font-variant: small-caps;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
 }            
 
  .trainer{
     display: flex;
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 20px;
+    padding-left: 20px;
     font-style: italic;
     text-transform: capitalize;
     font-variant: small-caps;
-    padding-bottom: 150px;
- }         
+    justify-content: center;
+    
+    
+ }       
+ .trainer span{
+    display: block;
+ }  
 
 
 
@@ -113,6 +128,8 @@ section p{
  .trainer >div{
     padding-top: 50px;
     padding-bottom: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
  }    
 
  .title-para{
@@ -137,6 +154,11 @@ section p{
     text-align: center;
     background-image: linear-gradient(rgba(255, 0, 0, 0.421),rgba(0, 0, 255, 0.418)),url(./images/dr_Jenny.jpg);
     padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
    
     background-position: center;
    
@@ -148,11 +170,10 @@ section p{
     display: flex;
    justify-content: space-around;
    
-   padding-top: 200px;
-   padding-bottom: 200px;
+   /* padding-top: 200px;
+   padding-bottom: 200px; */
    font-size: 20px;
-   /* padding-left: 50px;
-   padding-right: 50px; */
+   
    
 }
 .round >div{
@@ -161,6 +182,7 @@ section p{
     width: 200px;
     height: 200px;
     padding-top: 20px;
+   
    
 
    
@@ -195,6 +217,8 @@ section p{
     background-color: rgba(95, 158, 160, 0.6);
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 
 }
 .block-4{
@@ -234,6 +258,8 @@ section p{
     color: white;
     padding-top: 50px;
     padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
     
     
 
@@ -272,11 +298,14 @@ section p{
 .section-6{
     background-color:darkmagenta;
     padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .title-6{
     text-align: center;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     text-transform: capitalize;
 
 }                
@@ -293,7 +322,9 @@ section p{
     
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-top: 50px;
     padding-bottom: 50px;
     border: none;
     text-transform: uppercase;
@@ -322,6 +353,10 @@ section p{
     background-color: #009bff;
     padding-top: 20px;
     color: blue;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 *{
     box-sizing: border-box;
@@ -339,14 +374,14 @@ display: flex;
     
 flex-wrap: wrap;
 
-padding-right: 50px;
+/* padding-right: 50px; */
 
 }
  .full-paragraph .para{
     display: flex;
    padding-bottom: 20px;
     padding-top: 20px;
-    /* width: 50%; */
+    width: 50%;
     justify-content: center;
     align-items: center;
     
@@ -372,18 +407,29 @@ padding-right: 50px;
 
 .section-8{
     background-image:linear-gradient(rgba(0, 174, 255, 0.358),rgba(187, 255, 0, 0.438)),url(./images/dr_Jenny.jpg);
-    padding-top: 1px;
+    padding-top: 50px;
     background-position:  center;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
    
 
 
 }                     
 .para-head{
-    text-align: center;
-    padding-bottom: 150px;
-    padding-top: 450px;
-    text-align: center;
    
+    padding-bottom: 300px;
+    padding-top: 300px;
+    text-align: center;
+    font-size: 40px;
+  
+   
+}
+
+.para-head p{
+    font-size: 30px;
+    font-style: italic;
+    font-variant: small-caps;
 }
 .elit{
     display: block;
@@ -405,8 +451,10 @@ padding-right: 50px;
     background-color: black;
     color: white;
     justify-content: space-around;
-     padding-top: 10px;
-    padding-bottom: 10px; 
+     padding-top: 50px;
+    padding-bottom: 50px; 
+    padding-left: 20px;
+    padding-right: 20px;
 }  
 .header-foot .fonts i{
     padding:3px;
@@ -417,25 +465,32 @@ padding-right: 50px;
 .full-list {
 
     display: flex;
-    font-size: large;
+    font-size: 40px;
+   
 }
 
 
+
 .full-list .class .uno{
-    padding-left: 1px;
-   padding-right: 20px;
+    padding-left: 0px; 
+    padding-right: 50px;
+   
+} 
+.full-list .class .uno li{
+    padding:10px;
 }
 
 
 .header-foot{
 
-   font-size: 15px;
-   text-align: center;
+   font-size: 20px;
+   font-family:Arial, Helvetica, sans-serif;
+   
   
 }
 .header-foot h2{
-    font-style: italic;
-    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 .span{
     display: block;
@@ -462,23 +517,36 @@ padding-right: 50px;
 @media(max-width:767px){
 
 .main-head{
+   
     flex-direction: column;
     padding-top: 20px;
-       
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.main-body{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.div .list{
+    padding-left: 10px;
+   
+    
 }
 .main-body p{
     font-size: small;
 }
+
 .hell{
     text-align: center;
 }
 .div .list li a{
-    padding-left:5px;
-    padding-right: 5px;
+
+    padding-left:0px;
 }
 
 .div button{
-    padding-left: 2px;
+    padding-left:0px;
 }
 .owner .title-para{
     font-size: medium;
@@ -509,18 +577,30 @@ padding-right: 50px;
 
 
 
+ .block-4{
+    flex-direction: column;
+ }
+
 .block-4 .title-para-4{
      padding-bottom: 40px;
      padding-left: 20px;
      padding-right: 20px;
 }
 .img-1{
-    width: 100%;
-    padding-right: 30px;
+    /* width: 100%; */
+    padding: 20px;
+    flex-direction: column;
 }
+
+
+
 .img-2{
-    width: 100%;
-    padding-left:30px;
+    /* width: 100%; */
+    padding:20px;
+}
+.block-5{
+    flex-direction: column;
+
 }
 .block-5 .title-para-5{
     padding-bottom: 40px;
@@ -552,7 +632,14 @@ padding-right: 50px;
    
     padding-bottom: 20px;
    justify-content: center;
+  
+   
 }
+.full-paragraph .para{
+    width: 100%;
+}
+
+
 
 .header-7{
     padding: 20px;
@@ -562,27 +649,57 @@ padding-right: 50px;
     
 }
 
+.section-8{
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-.para-head{
-    padding-left: 5px;
-    padding-right: 5px;
+
+.para-head p {
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    padding-left:20px;
+    padding-right: 20px;
+    font-size: x-large;
+   font-variant: small-caps;
 }
 
 
 
 
-
+.footer .header-foot{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 .footer{
     flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     
 }
 .full-list .class {
-    padding-right: 5px;
-    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+    
 }
-.header-foot p{
-  font-size: small;
+
+.full-list{
+    flex-direction: column;
+    /* align-items: center; */
+    font-size: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+        
+
+   
+    
 }
 
 
@@ -604,6 +721,7 @@ padding-right: 50px;
         justify-content: space-between;
         position: fixed;
         width: 100%;
+        padding-top: 10px;
     }
     
     
@@ -638,7 +756,7 @@ padding-right: 50px;
         background-image: linear-gradient(rgb(0 157 255 / 0%),rgb(0 0 255 / 87%)),url(./images/banner_image.jpg);
         background-position: center;
         padding-top: 300px;
-        padding-bottom: 200px;
+        padding-bottom: 300px;
         text-align: center;
         color:white;
         font-style: italic;
@@ -689,31 +807,40 @@ padding-right: 50px;
     .owner{
         text-align: center;
         background-color: rgba(100, 27, 0, 0.321);
-        padding-top: 20px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
        }    
     .head{
         text-transform: capitalize;
         font-weight: bold;
         font-variant: small-caps;
-        padding-bottom: 25px;
+        padding-bottom: 20px;
     }            
     
      .trainer{
         display: flex;
-        padding-right: 50px;
-        padding-left: 50px;
+        padding-right: 20px;
+        padding-left: 20px;
         font-style: italic;
         text-transform: capitalize;
         font-variant: small-caps;
-        padding-bottom: 150px;
-     }         
+       
+     }    
+     .trainer span{
+        display: block;
+     }       
     
     
     
     
      .trainer >div{
         padding-top: 50px;
-        padding-bottom: 10px;
+        padding-bottom: 50px;
+        padding-left: 50px;
+        padding-right: 50px;
+
      }    
     
      .title-para{
@@ -738,7 +865,11 @@ padding-right: 50px;
         text-align: center;
         background-image: linear-gradient(rgba(255, 0, 0, 0.421),rgba(0, 0, 255, 0.418)),url(./images/dr_Jenny.jpg);
         padding-top: 50px;
-       
+        padding-bottom: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-repeat: no-repeat;
+        background-size: cover; 
         background-position: center;
        
     }    
@@ -752,8 +883,7 @@ padding-right: 50px;
        padding-top: 200px;
        padding-bottom: 200px;
        font-size: 20px;
-       /* padding-left: 50px;
-       padding-right: 50px; */
+     
        
     }
     .round >div{
@@ -761,7 +891,9 @@ padding-right: 50px;
         border: 15px solid white;
         width: 200px;
         height: 200px;
+        /* text-align: center; */
         padding-top: 20px;
+      
        
     
        
@@ -796,6 +928,8 @@ padding-right: 50px;
         background-color: rgba(95, 158, 160, 0.6);
         padding-top: 50px;
         padding-bottom: 50px;
+        padding-left: 20px;
+    padding-right: 20px;
     
     }
     .block-4{
@@ -835,6 +969,8 @@ padding-right: 50px;
         color: white;
         padding-top: 50px;
         padding-bottom: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
         
         
     
@@ -873,11 +1009,14 @@ padding-right: 50px;
     .section-6{
         background-color:darkmagenta;
         padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 20px;
+    padding-right: 20px;
     }
     
     .title-6{
         text-align: center;
-        padding-bottom: 40px;
+        padding-bottom:10px;
         text-transform: capitalize;
     
     }                
@@ -891,10 +1030,11 @@ padding-right: 50px;
         border-radius: 1px;
         background-color:blueviolet;
         color: black;
-        
+        margin-bottom: 20px;
+        margin-top: 20px;
         margin-left: 20px;
         margin-right: 20px;
-        margin-bottom: 30px;
+        padding-top: 50px;
         padding-bottom: 50px;
         border: none;
         text-transform: uppercase;
@@ -923,6 +1063,10 @@ padding-right: 50px;
         background-color: #009bff;
         padding-top: 20px;
         color: blue;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     *{
         box-sizing: border-box;
@@ -940,16 +1084,17 @@ padding-right: 50px;
         
     flex-wrap: wrap;
     
-    padding-right: 50px;
+    /* padding-right: 50px; */
     
     }
      .full-paragraph .para{
         display: flex;
-       padding-bottom: 20px;
-        padding-top: 20px;
+       padding-bottom: 50px;
+        padding-top: 50px;
         width: 50%;
         justify-content: center;
         align-items: center;
+        font-size: large;
         
     }
     .full-paragraph .para img{
@@ -973,18 +1118,28 @@ padding-right: 50px;
     
     .section-8{
         background-image:linear-gradient(rgba(0, 174, 255, 0.358),rgba(187, 255, 0, 0.438)),url(./images/dr_Jenny.jpg);
-        padding-top: 1px;
+        padding-top: 50px;
         background-position:  center;
+        padding-bottom: 50px;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-size: cover;
+        background-repeat: repeat;
+        
        
     
     
     }                     
     .para-head{
+    
+        padding-bottom: 300px;
+        padding-top: 300px;
         text-align: center;
-        padding-bottom: 150px;
-        padding-top: 450px;
-        text-align: center;
-       
+    }
+    .para-head p{
+        font-size: 30px;
+        font-style: italic;
+        font-variant: small-caps;
     }
     .elit{
         display: block;
@@ -995,59 +1150,71 @@ padding-right: 50px;
     
     
     
-                       /* section 9 */
-    
-    
-    
-    
-    
-    .footer{
-        display: flex;
-        background-color: black;
-        color: white;
-        justify-content: space-around;
-         padding-top: 10px;
-        padding-bottom: 10px; 
-    }  
-    .header-foot .fonts i{
-        padding:3px;
-    }
-    
-    
-    
-    .full-list {
-    
-        display: flex;
-        font-size: large;
-    }
-    
-    
-    .full-list .class .uno{
-        padding-left: 1px;
-       padding-right: 20px;
-    }
-    
-    
-    .header-foot{
-    
-       font-size: 15px;
-       text-align: center;
-      
-    }
-    .header-foot h2{
-        font-style: italic;
-        text-align: center;
-    }
-    .span{
-        display: block;
-    }
-    
-    
-    .uno {
-        font-size: 80%;
-        list-style: none;
-       
-    } 
+                    /* section 9 */
+ .footer{
+    display: flex;
+    background-color: black;
+    color: white;
+    justify-content: space-around;
+    padding-top: 50px;
+    padding-bottom: 50px; 
+    padding-left: 20px;
+    padding-right: 20px;
+}  
+.header-foot .fonts i{
+padding:3px;
+}
+
+
+
+.full-list {
+
+display: flex;
+font-size: 40px;
+
+}
+
+
+
+.full-list .class .uno{
+padding-left: 0px; 
+padding-right: 50px;
+
+} 
+.full-list .class .uno li{
+padding:10px;
+}
+
+
+.header-foot{
+
+font-size: 20px;
+font-family:Arial, Helvetica, sans-serif;
+
+
+}
+.header-foot h2{
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.span{
+display: block;
+}
+
+
+.uno {
+font-size: 80%;
+list-style: none;
+
+} 
+ 
+                       
+
+
+
+
+
+
 }
 
 
@@ -1055,10 +1222,18 @@ padding-right: 50px;
 
 
 /***************************** Tab css start #################################*/
+                     /* i pad */
 
 
 
 @media (min-width:768px) and (max-width:991px){
+
+
+.main-body{
+    
+padding-left: 10px;
+padding-right: 10px;
+}
 .trainer {
 flex-direction: column;
 }
@@ -1074,13 +1249,22 @@ flex-direction: column;
     padding-left: 10px;
 }
 .img-2{
-    padding-left: 10px;
+    padding-left: 20px;
     
 }
 
 .block-6 >div{
     padding: 10px;
 }
+.footer{
+    flex-direction: column;
+    padding: 20px;
+}
+.full-list .class{
+    padding: 5px;
+
+}
+
 
 }
 /* *****************************Tab css end -------------------------------------
@@ -1131,9 +1315,7 @@ flex-direction: column;
     .title-6{
         padding: 20px;
     }
-    .para-head p{
-        font-size: small;
-    }
+  
     .block-6 div p{
         font-size: x-small;
     }
@@ -1161,7 +1343,7 @@ flex-direction: column;
 
     @media(min-width:281px) and (max-width:360px){
         .div .list li a{
-          padding-left: 10px;
+          padding-left: 5px;
         padding-right: 5px;
         }
         .div .list{
